--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -8,6 +8,8 @@
         <input type="submit" value="CREATE"/>
     </form>
     <br />
+    or check out <a href="<%= siteUrl %>/feed.jsonp">JSON</a> or <a href="<%= siteUrl %>/feed.xml">XML</a> feeds.
+    <br/>
     <hr />
     <br />
     <% for (var i=0; i < results.length; i++) { %>
